# hstats

./: LICENSE  TODO  hstats.cabal
src/Math/: Statistics.hs
src/Numeric/: Statistics.hs
tests/: QCStatistics.hs
