Name:                hstats
Version:             0.3.0.1
License:             BSD3
License-file:        LICENSE
Author:              Marshall Beddoe
Copyright:           Copyright (c) 2008, Marshall Beddoe
category:            Math
synopsis:            Statistical Computing in Haskell
build-type:          Simple
description:         A library of commonly used statistical functions
maintainer:          bash@chordify.net
homepage:            https://github.com/haas/hstats
hs-source-dirs:      src
ghc-options:         -O2
exposed-Modules:     Math.Statistics
extensions:          BangPatterns
build-depends:       base>=3.0
